--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
     "jquery": "^3.6.4",
+    "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.7.3",
     "tslib": "^2.3.0",
