--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "angular-cli-ghpages": "^1.0.5",
     "angular-datatables": "^15.0.0",
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
