--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@swimlane/ngx-charts": "^20.1.2",
     "angular-cli-ghpages": "^1.0.5",
     "angular-datatables": "^15.0.0",
     "datatables.net": "^1.13.4",
@@ -33,6 +34,9 @@
     "@angular-devkit/build-angular": "^15.1.6",
     "@angular/cli": "~15.1.6",
     "@angular/compiler-cli": "^15.1.0",
+    "@types/d3-scale": "^4.0.3",
+    "@types/d3-selection": "^3.0.5",
+    "@types/d3-shape": "^3.1.1",
     "@types/datatables.net": "^1.10.24",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
