--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "angular-datatables": "^15.0.0",
     "datatables.net": "^1.13.4",
     "datatables.net-dt": "^1.13.4",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.6.4",
+    "jspdf": "^2.5.1",
     "moment": "^2.29.4",
     "ng2-pdf-viewer": "^9.1.5",
     "rxjs": "~7.8.0",
@@ -39,8 +41,10 @@
     "@types/d3-selection": "^3.0.5",
     "@types/d3-shape": "^3.1.1",
     "@types/datatables.net": "^1.10.24",
+    "@types/html2canvas": "^1.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/jquery": "^3.5.16",
+    "@types/jspdf": "^2.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
